--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -260,7 +260,7 @@ en:
     search:
       start: Start searching...
   landing:
-    about: "%{href} is a simple front-end for your OpenSchool open-source web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
+    about: "%{href} is a server where can create your own rooms to host sessions, or join others using a short and convenient link."
     welcome: Welcome to OpenSchool.
     video: Watch our tutorial on using OpenSchool
     upgrade: Show me how to upgrade to 2.0!
